Minor navbar fixes
This adds some minor fixes to the navigation bar. Now it is not
half-transparent anymore so that it still is readable when the pages
scrolls. Also the progress bar doesn't scroll out of view anymore.

--- a/themes/white.less
+++ b/themes/white.less
@@ -10,7 +10,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Nunito:700|Raleway:400,400i,700');
 
-@nav-bg: rgba(0, 0, 0, 0.07);
+@nav-bg: rgb(237, 237, 237);
 
 :local(.style) {
     // Font settings
